# racaOS

./: .gitignore  Cargo.toml  README.md  build.py  racaOS.img
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
Docs/: compile.md  index.md  install.md
apps/: Cargo.toml  build.rs  c_hello1.rae  hello1.rae  hello2.rae  link.ld  target.json
apps/.cargo/: config.toml
apps/hello1/: Cargo.toml  build.rs
apps/hello1/src/: main.rs
apps/hello2/: Cargo.toml
apps/hello2/src/: main.rs
apps/init/: Cargo.toml
apps/init/src/: main.rs
apps/shell/: Cargo.toml
apps/shell/src/: main.rs  run.rs
apps/shell/src/commands/: cat.rs  cd.rs  echo.rs  exit.rs  ls.rs  mod.rs  mount.rs  write.rs
builder/: Cargo.toml
builder/src/: gz_builder.rs  image_builder.rs  main.rs
crates/good-fatfs/src/: dir_entry.rs  file.rs
crates/kernel-sync/: Cargo.toml
crates/nvme_driver/: Cargo.toml
crates/nvme_driver/src/nvme/: mod.rs  nvme.rs  nvme_queue.rs
disk_image/: Cargo.toml  boot_img.fat  boot_img.img  core.sys
disk_image/src/: main.rs
esp/: disk.img  hello.km  limine.cfg  limine.conf  test.rae  test2.rae
esp/RACA/app64/: hello1.rae  hello2.rae  init.rae  shell.rae
esp/RACA/system64/: core.sys
esp/RACA/user/: passwd
modules/: link.ld
modules/.cargo/: config.toml
modules/hello/: Cargo.toml  build.rs
modules/hello/.cargo/: config.toml
modules/hello/src/: lib.rs  main.rs
modules/module_std/: Cargo.toml
modules/module_std/src/: lib.rs
modules/modules/: target.json
raca_core/: Cargo.toml  build.rs  link.ld  linker-x86_64.ld  raca.json  target.json
raca_core/device/: Cargo.toml
raca_core/device/src/: lib.rs  main.rs
raca_core/device/src/drivers/: ahci.rs  mod.rs  nvme.rs  usb.rs
raca_core/device/src/drivers/xhci/: mod.rs
raca_core/device/src/fs/: ext2.rs  fat32.rs  mod.rs  operation.rs
raca_core/device/src/fs/vfs/: cache.rs  inode.rs  ipc.rs  mod.rs  pipe.rs  root.rs
raca_core/device/src/fs/vfs/dev/: block.rs  gpt_parser.rs  mod.rs  partition.rs  terminal.rs
raca_core/device/src/user/: mod.rs
raca_core/device/src/user/syscall/: debug.rs  fs.rs  mod.rs  task.rs
raca_core/framework/: Cargo.toml
raca_core/framework/src/: lib.rs
raca_core/framework/src/arch/: apic.rs  gdt.rs  interrupts.rs  mod.rs  smp.rs
raca_core/framework/src/arch/smp/: cpu.rs  mod.rs
raca_core/framework/src/console/: display.rs  log.rs  mod.rs  printk.rs
raca_core/framework/src/drivers/: display.rs  hpet.rs  keyboard.rs  mod.rs  mouse.rs  pci.rs  serial.rs  xhci.rs
raca_core/framework/src/memory/: frame.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs  user_heap.rs
raca_core/framework/src/task/: mod.rs  process.rs  scheduler.rs  thread.rs
raca_core/framework/src/terminal/: ansi.rs  buffer.rs  cell.rs  console.rs  graphic.rs  mod.rs
raca_core/framework/src/user/: mod.rs  syscall.rs
raca_core/src/: error.rs  lib.rs  main.rs
raca_core/src/arch/: apic.rs  gdt.rs  interrupts.rs  mod.rs  smp.rs
raca_core/src/device/: mod.rs
raca_core/src/drivers/: ahci.rs  block.rs  mod.rs  nvme.rs
raca_core/src/drivers/net/: e1000.rs  mod.rs
raca_core/src/drivers/xhci/: mod.rs
raca_core/src/fs/: ext2.rs  ext4.rs  fat32.rs  mod.rs  operation.rs
raca_core/src/fs/vfs/: cache.rs  inode.rs  pipe.rs  root.rs
raca_core/src/fs/vfs/dev/: block.rs  gpt_parser.rs  mod.rs  partition.rs  terminal.rs  tty.rs
raca_core/src/ipc/: channel.rs  mod.rs
raca_core/src/memory/: kernel_heap.rs  manager.rs  page_table.rs
raca_core/src/module/: mod.rs  operations.rs
raca_core/src/object/: handle.rs  mod.rs  rights.rs
raca_core/src/sync/: mod.rs
raca_core/src/syscall/: consts.rs  debug.rs  mod.rs  syscall_numbers
raca_core/src/task/: mod.rs  process.rs  scheduler.rs  thread.rs
raca_core/src/ui/: mod.rs
raca_core/src/user/: login.rs  mod.rs
raca_core/src/user/syscall/: fs.rs  mm.rs  mod.rs  task.rs
raca_std/: Cargo.toml
raca_std/src/: debug.rs  fs.rs  io.rs  lib.rs  mm.rs  task.rs
rc_object_derive/: Cargo.toml
rc_object_derive/src/: lib.rs
tools/passwd/: Cargo.toml
tools/passwd/src/: main.rs
