[workspace]
members = [ "builder","crates/fatfs","raca_core/device","raca_core/framework", "raca_std" ,"apps/hello1", "apps/hello2", "apps/init"]
resolver="2"
default-members = ["builder"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1
