[workspace]
members = [ "builder","crates/good-fatfs","raca_core","raca_std" ,"apps/hello1", "apps/hello2", "apps/init", "apps/shell", "tools/passwd"]
resolver="2"
default-members = ["builder"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1
