cargo-features = ["per-package-target"]

[package]
name = "raca_core"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"
target-feature = "+sse"

[dependencies]
spin = "0.9.8"
x86_64 = "0.15.1"
bitflags = "2.6.0"
bit_field = "0.10.2"
volatile = "0.3"
gpt_disk_io = "0.16.0"
xhci = "0.9.2"
usb-device = "0.3.2"
rs_sha3_512 = "0.1.2"
pc-keyboard = "0.7.0"
ext4_rs = "1.1.0"

[dependencies.fontdue]
version = "0.9.2"
default-features = false
features = ["hashbrown"]

[dependencies.fatfs]
path = "../crates/good-fatfs"
features = ["lfn","alloc","unicode"]
default-features = false

[dependencies.limine]
version = "0.2.0"
features = ["uuid"]

[dependencies.uuid]
version = "1.0"
default-features = false

[dependencies.framework]
package = "good-os-framework"
version = "0.5.3"
features = ["smp"]
# path = "../../good_os_framework"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.11"
features = ["alloc"]
default-features = false

[dependencies.smoltcp]
version = "0.11.0"
default-features = false
features = ["log","proto-ipv4","proto-ipv6","socket-icmp", "socket-udp","socket-dhcpv4", "socket-tcp", "socket-raw","medium-ip","medium-ethernet","proto-igmp","alloc"]
