cargo-features = ["per-package-target"]

[package]
name = "raca_core"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[dependencies]
x86_64 = "0.15.1"
bit_field = "0.10.2"
os-terminal = "0.3.7"
spin = "0.9.8"
talc = "4.4.1"
uart_16550 = "0.3.1"
acpi = "5.0.0"
x2apic = "0.4.3"
numeric-enum-macro = "0.2.0"

[dependencies.object]
version = "0.36.4"
features = ["read_core", "elf", "unaligned", ]
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.limine]
version = "0.3.1"
features = ["uuid"]
