[package]
name = "lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ticket"]
ticket = ["spin/use_ticket_mutex"]

[dependencies]
cfg-if = "1.0.0"
raw-cpuid = "10.2.0"
x86_64 = "0.14.6"
spin = "0.9"
