cargo-features = ["per-package-target"]

[package]
name = "device"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[dependencies]
spin = "0.9.8"
x86_64 = "0.15.1"
bitflags = "2.6.0"
bit_field = "0.10.2"
pci = {git = "https://gitee.com/rcore-os/pci-rs/"}
volatile = "0.3"
gpt_disk_io = "0.16.0"
xhci = "0.9.2"
usb-device = "0.3.2"
pc-keyboard = "0.7.0"

[dependencies.fatfs]
path = "../../crates/good-fatfs"
features = ["lfn","alloc","unicode"]
default-features = false

# [dependencies.nvme_driver]
# path = "../../crates/nvme_driver"

[dependencies.limine]
version = "0.2.0"
features = ["uuid"]

[dependencies.uuid]
version = "1.0"
default-features = false

[dependencies.framework]
path = "../framework"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.11"
features = ["alloc"]
default-features = false
